new changes and mobile responsiveness

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,14 @@
     -->
     <title>React App</title>
   </head>
+  <style>
+    html,body {
+      padding: 0;
+      margin: 0;
+      box-sizing: border-box;
+      scroll-behavior: smooth;
+    }
+  </style>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
